<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="development.oms.com.musictempo.fragment.TempoFragment"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

<!--
    <TextView
        android:layout_width="54dp"
        android:layout_height="22dp"
        android:text="@string/tempo_name"
        android:id="@+id/textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="46dp"
        app:layout_constraintRight_toLeftOf="@+id/tempo_edit_name"
        app:layout_constraintHorizontal_bias="0.3" />

    <EditText
        android:id="@+id/tempo_edit_name"
        android:layout_width="215dp"
        android:layout_height="41dp"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="46dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempo_value"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="56dp"
        tools:layout_conversion_absoluteWidth="47dp"
        tools:layout_conversion_absoluteHeight="16dp"
        android:id="@+id/textView2"
        tools:layout_editor_absoluteY="189dp"
        tools:layout_editor_absoluteX="91dp" />

    <EditText
        android:id="@+id/tempo_edit_time"
        android:layout_width="100dp"
        android:layout_height="42dp"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        tools:layout_conversion_absoluteHeight="42dp"
        tools:layout_conversion_absoluteWidth="100dp"
        tools:layout_conversion_absoluteX="47dp"
        tools:layout_conversion_absoluteY="42dp"
        tools:layout_editor_absoluteY="180dp"
        tools:layout_editor_absoluteX="177dp" />


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempo_begin_pause"
        android:id="@+id/tempo_begin_button"
        android:src="@drawable/ic_play"
        tools:layout_editor_absoluteY="261dp"
        tools:layout_editor_absoluteX="168dp" />
-->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tempo_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tempo_edit_name"
        app:layout_constraintTop_toBottomOf="@+id/space" />

    <EditText
        android:id="@+id/tempo_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/space" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tempo_value"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tempo_edit_time"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/tempo_edit_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tempo_edit_name" />

    <ImageButton
        android:id="@+id/tempo_begin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/tempo_begin_pause_description"
        app:layout_constraintRight_toRightOf="parent" />

    <Space
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/space"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/tempo_note"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tempo_note"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Spinner
        android:id="@+id/tempo_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempo_edit_time" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tempo_duration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tempo_edit_duration"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/tempo_edit_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tempo_note" />

</android.support.constraint.ConstraintLayout>
